Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-42231

QProxyStyle documentation error

XMLWordPrintable

    • Icon: Bug Bug
    • Resolution: Done
    • Icon: P3: Somewhat important P3: Somewhat important
    • 5.5.0 Beta
    • 5.3.2
    • GUI: Look'n'Feel
    • None
    • a743a3a216b35e131157ed1044dd810c965451cf

      The doc says:

      Constructs a QProxyStyle object for overriding behavior in the specified base style, or in the current application style if base style is not specified.

      But the part "current application style" is wrong. In reality, it is the default native style that is used, and this can't be changed using QApplication::setStyle.

      See Qt method to see what I mean:
      QProxyStylePrivate::ensureBaseStyle

        For Gerrit Dashboard: QTBUG-42231
        # Subject Branch Project Status CR V

            gbk Martin Smith (Qt)
            jirauser26727 user-04d21 (Inactive)
            Votes:
            0 Vote for this issue
            Watchers:
            3 Start watching this issue

              Created:
              Updated:
              Resolved:

                There are no open Gerrit changes