doc: Correct error in QProxyStyle() doc.

Constructing the QProxyStle object with a null QStyle
pointer causes the QProxyStyle to use the default native
style.

Change-Id: If624ed7a805aef839ca8a51242d12b2f6d777e83
Task-number: QTBUG-42231
Reviewed-by: Venugopal Shivashankar <venugopal.shivashankar@digia.com>

cregit: 17294c5e4d15d5776f6e414b03671a4a9ed4993d https://github.com/qt/qtbase/commit/17294c5e4d15d5776f6e414b03671a4a9ed4993d