src/widgets/styles/qproxystyle.cpp
@@ -202,7 +202,7 @@ comment|// Take ownership
 block|}
 end_function
 begin_comment
-comment|/*!   Constructs a QProxyStyle object for overriding behavior in the   specified base \a style, or in the current \l{QApplication::style()}   {application style} if base \a style is not specified.    Ownership of \a style is transferred to QProxyStyle. */
+comment|/*!   Constructs a QProxyStyle object for overriding behavior in the   specified \a style, or in the default native \l{QApplication::style()}   {style} if \a style is not specified.    Ownership of \a style is transferred to QProxyStyle. */
 end_comment
 begin_constructor
 DECL|function|QProxyStyle
